--- a/style.css
+++ b/style.css
@@ -30,6 +30,13 @@ body {
     margin-left: 150px;
 }
 
+#hambarger {
+    display: none;
+ }
+ 
+ #hambargarmenu {
+    display: none;
+ }
 .links {
     display: flex;
     column-gap: 50px;
@@ -1163,4 +1170,283 @@ width: 270px;
     border-radius: 50%;
     background-image: linear-gradient(to bottom right, #202020, #131313);
     border: 0.2px solid rgb(91, 91, 91);
+}
+
+/* ---------------------------------------------------------------------------------------------------------------------- */
+
+
+
+@media only screen and (max-width:767px) {
+    .nav-bar{
+        display: none;
+    }
+    
+   #hambarger {
+    display: flex;
+    height: 70px;
+    margin-left: 50px;
+    margin-top: 50px; 
+}
+    
+ 
+
+ #hambargarmenu {
+    position: fixed;
+    margin-top: -100px;
+    height: 100%;
+    width: 50%;
+    background-color: black;
+    margin-left: 0px;
+    z-index: 100;
+    transform: translateX(-100%);
+ }
+ #close-menu{
+    display: flex;
+    height: 70px;
+    margin-left: 36px;
+    margin-top: 84px;
+    position: fixed;
+ }
+ 
+ #home{
+    color: white;
+    font-size: 40px;
+    margin-top: 400px;
+    writing-mode: horizontal-tb;
+    margin-left: 140px;
+    width: fit-content;
+   
+ }
+ #about{
+    color: white;
+    font-size: 40px;
+    margin-top: 550px;
+    writing-mode: horizontal-tb;
+    margin-left: -120px;
+}
+ #contact{
+    color: white;
+    font-size: 40px;
+    margin-top: 700px;
+    writing-mode: horizontal-tb;
+    margin-left: -130px;
+ }
+ #work{
+    color: white;
+    font-size: 40px;
+    margin-top: 840px;
+    writing-mode: horizontal-tb;
+    margin-left: -120px;
+ }
+ .profile{
+    margin-left: -90px;
+    margin-top: 0px;
+    height: 900px;
+ }
+#profile-picture{
+ height: 460px;
+    border-radius: 30px 0px;
+    margin-left: 46px;
+    margin-top: 50px;
+}
+#profession{
+    font-size: 20px;
+    margin-top: 35px;
+    margin-left: 50px;
+    color: #878787;
+    font-weight: 500;
+}
+#full-name {
+    font-size: 40px;
+    margin-left: 50px;
+    color: #ffffff;
+    font-weight: 500;
+}
+#job-title {
+    font-size: 20px;
+    margin-top: 10px;
+    margin-left: 50px;
+    color: #878787;
+    font-weight: 300;
+}
+#detail-icon1{
+    margin-left: 450px;
+}
+.featured {
+    height: 55px;
+    width: 548px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-left: -90px;
+}
+marquee {
+    display: flex;
+    color: white;
+    font-size: 20px;
+    margin-top: 10px;
+}
+.credentials {
+    margin-top: 95px;
+    margin-left: -565px;
+    height: 450px;
+    width: 550px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border-radius: 20px;
+}
+
+#signature {
+    padding-top: 50px;
+    width: 540px;
+}
+#details {
+    color: #878787;
+    margin-left: 50px;
+    margin-top: 50px;
+    font-size: 20px;
+}
+#title {
+    font-size: 40px;
+    color: #ffffff;
+    margin-left: 50px;
+}
+#detail-icon2 {
+    display: flex;
+    margin-left: 450px;
+    margin-top: -60px;
+    cursor: pointer;
+    opacity: 0.5;
+}
+.projects {
+    margin-top: 20px;
+    height: 450px;
+    width: 550px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border-radius: 20px;
+ margin-left: -90px;   
+}
+#myworks {
+    font-size: 40px;
+    font-weight: 700;
+    color: #878787;
+    margin-left: 160px;
+    margin-top: 40px;
+}
+#myworks-image {
+    height: 136px;
+    width: 242px;
+    border-radius: 5px;
+    margin-left: 150px;
+    padding-bottom: 10px;
+}
+.blog {
+    height: 450px;
+    width: 550px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border-radius: 20px;
+   margin-left: -90px;
+}
+#blog-image {
+    height: 220px;
+    margin-left: 195px;
+    margin-top: 40px;
+}
+.services {
+    height: 350px;
+    width: 550px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-left: -90px;
+}
+.services-offered {
+    display: flex;
+    column-gap: 80px;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 50px;
+    margin-top: 70px;
+    
+}
+.social-profiles {
+    height: 350px;
+    width: 550px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-left: -90px;
+}
+.profile-box {
+    height: 150px;
+    width: 450px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border: 0.2px solid rgb(91, 91, 91);
+    border-radius: 30px;
+    margin-top: 30px;
+    margin-left: 46px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border: 0.2px solid rgb(91, 91, 91);
+}
+.experience {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 875px;
+    width: 550px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border-radius: 30px;
+    margin-left: -90px;
+    
+}
+.experience-row {
+    display: block;
+    margin-top: -25px;
+}
+.experiences {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 250px;
+    width: 450px;
+    border-radius: 30px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border: 0.2px solid rgb(91, 91, 91);
+    margin-top: 30px;
+}
+#number {
+    color: white;
+    font-size: 50px;
+}
+#detail {
+    color: #878787;
+    font-size: 20px;
+}
+.connect {
+    height: 200px;
+    width: 550px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border-radius: 20px;
+    margin-left: -90px;
+    margin-top: 20px;
+}
+footer{
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    width: 725px;
+
+}
 }
