--- a/style.css
+++ b/style.css
@@ -1204,7 +1204,9 @@ textarea {
     background-image: linear-gradient(to bottom right, #202020, #131313);
     border: 0.2px solid rgb(91, 91, 91);
 }
-
+.extra{
+    display: none;
+}
 /* ---------------------------------------------------------------------------------------------------------------------- */
 
 
@@ -1568,6 +1570,7 @@ textarea {
         background-image: linear-gradient(to bottom right, #202020, #131313);
         margin-left: 90px;
     }
+
     .education-profile {
         height: 500px;
         width: 950px;
@@ -1575,6 +1578,7 @@ textarea {
         background-image: linear-gradient(to bottom right, #202020, #131313);
         margin-left: 90px;
     }
+
     .connect-profile {
         height: 260px;
         width: 950px;
@@ -1583,12 +1587,14 @@ textarea {
         margin-left: 90px;
         margin-top: 50px;
     }
+
     #full-name-profile {
         font-size: 50px;
         color: white;
         margin-left: 50px;
         margin-top: 20px;
     }
+
     #name-description-profile {
         width: 790px;
         margin-left: 50px;
@@ -1596,6 +1602,7 @@ textarea {
         color: #878787;
         font-size: 25px;
     }
+
     #box-title-profile {
         font-size: 35px;
         color: white;
@@ -1604,42 +1611,49 @@ textarea {
         font-weight: 400;
         padding-top: 50px;
     }
+
     #experience-period {
         margin-left: 46px;
         margin-top: 30px;
         color: #878787;
         font-size: 25px;
     }
+
     #experience-domain {
         margin-left: 46px;
         margin-top: 5px;
         color: #ffffff;
         font-size: 25px;
     }
+
     #experience-company {
         margin-left: 46px;
         margin-top: 5px;
         color: #878787;
         font-size: 25px;
     }
+
     #education-period {
         margin-left: 46px;
         margin-top: 30px;
         color: #878787;
         font-size: 25px;
     }
+
     #education-domain {
         margin-left: 46px;
         margin-top: 5px;
         color: #ffffff;
         font-size: 25px;
     }
+
     #education-company {
         margin-left: 46px;
         margin-top: 5px;
         color: #878787;
         font-size: 25px;
     }
+
     #lets-work-profile {
         margin-left: 46px;
         font-size: 50px;
@@ -1648,6 +1662,7 @@ textarea {
         color: white;
         letter-spacing: 2px;
     }
+
     #detail-icon5 {
         display: flex;
         margin-left: 715px;
@@ -1666,11 +1681,99 @@ textarea {
         margin-top: 120%;
         margin-left: 46%;
     }
+
     .container {
         display: flex;
         justify-content: center;
         margin-top: 134%;
         margin-left: 20px;
+    }
+
+    #footer {
+        display: none;
+        color: #878787;
+    }
+
+
+
+    /* ----------------------------------------------------------------- */
+
+    .first-row-credentials {
+        display: block;
+
+    }
+    .profile-box-credential {
+        height: 920px;
+        width: 620px;
+        background-image: linear-gradient(to bottom right, #202020, #131313);
+        border-radius: 20px;
+        margin-left: -110px;
+    }
+    .left-credential {
+        width: 450px;
+        height: fit-content;
+        position: relative;
+        top: 20px;
+    }
+    .right-credential {
+        width: 575px;
+        height: fit-content;
+        margin-left: -100px;
+        margin-top: 50px;
+    }
+    #profile-picture-credentials {
+        height:500px;
+        border-radius: 10px;
+        margin-top: 30px;
+        margin-left: 60px;
+    }
+    #full-name-credentials {
+        font-size: 40px;
+        color: #ffffff;
+        margin-left: 110px;
+        width: fit-content;
+        margin-top: 20px;
+    }
+    #email-credentials {
+        font-size: 20px;
+        color: #878787;
+        margin-left: 200px;
+        width: fit-content;
+        margin-top: 10px;
+    }
+    .social-icons-box-credentials {
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        background-image: linear-gradient(to bottom right, #202020, #131313);
+        border: 0.5px solid gray;
+        justify-content: center;
+        display: flex;
+        align-items: center;
+    }
+    .social-icons-credentials {
+        display: flex;
+        width: fit-content;
+        margin-left: 80px;
+        column-gap: 20px;
+        margin-top: 20px;
+    }
+    #contact-me {
+        width: 400px;
+        height: 60px;
+        margin-left: 110px;
+        margin-top: 50px;
+        border-radius: 10px;
+        background-color: #252525;
+        color: white;
+        border: none;
+        font-family: poppins;
+        font-size: 30px;
+    }
+    .extra {
+        display: block;
+        width: 790px;
+        height: 1px;
     }
 
 }
