--- a/style.css
+++ b/style.css
@@ -181,6 +181,10 @@ marquee {
     color: #878787;
     margin-left: 40px;
 }
+#details-service-page{
+    color: #878787;
+    margin-left: 40px;
+}
 #title {
     font-size: 30px;
     color: #ffffff;
@@ -191,7 +195,11 @@ marquee {
     color: #ffffff;
     margin-left: 40px;
 }
-
+#title-service-page {
+    font-size: 30px;
+    color: #ffffff;
+    margin-left: 40px;
+}
 #detail-icon2 {
     display: flex;
     margin-left: 230px;
@@ -1298,7 +1306,35 @@ opacity: 1;
     column-gap: 20px;
     height: 100px;
 }
+.social-profiles-services-service-page {
+    height: 250px;
+    width: 300px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border-radius: 20px;
+    margin-top: -250px;
+    margin-left: 1065px;
+    display: block;
+}
 
+.profile-box-services-service-page {
+    height: 100px;
+    width: 200px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border: 0.2px solid rgb(91, 91, 91);
+    border-radius: 30px;
+    display: inline-block;
+    margin-top: 20px;
+    margin-left: 50px;
+    margin-bottom: 20px;
+}
+
+.social-icons-services-service-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 20px;
+    height: 100px;
+}
 .social {
     display: flex;
     justify-content: center;
@@ -2165,6 +2201,7 @@ opacity: 1;
     color: #ffffff;
     margin-left: 80px;
 }
+
 #detail-icon6 {
     display: flex;
     margin-left: 870px;
@@ -2193,7 +2230,7 @@ opacity: 1;
     opacity: 0.5;
     height: 110px;
 }
-.social-profiles-services {
+.social-profiles-services-service-page {
     height: 500px;
     width: 1145px;
     background-image: linear-gradient(to bottom right, #202020, #131313);
@@ -2204,7 +2241,7 @@ opacity: 1;
     padding-top: 5px;
 }
 
-.profile-box-services {
+.profile-box-services-service-page {
     height: 210px;
     width: 560px;
     background-image: linear-gradient(to bottom right, #202020, #131313);
@@ -2218,7 +2255,7 @@ opacity: 1;
     align-items: center;
 }
 
-.social-icons-services {
+.social-icons-services-service-page {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -2226,7 +2263,7 @@ opacity: 1;
     height: 100px;
 }
 
-.social {
+.social-service-page {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -2236,13 +2273,13 @@ opacity: 1;
     background-image: linear-gradient(to bottom right, #202020, #131313);
     border: 0.2px solid rgb(91, 91, 91);
 }
-#details {
+#details-service-page {
     color: #878787;
     margin-left: 80px;
     margin-top: 50px;
     font-size: 30px;
 }
-#title {
+#title-service-page {
     font-size: 60px;
     color: #ffffff;
     margin-left: 80px;
